--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "flowbite-react": "^0.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-lines-ellipsis": "^0.15.3",
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
